argocd/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-modulith-test
  namespace: modulith-argo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-modulith-test
  template:
    metadata:
      labels:
        app: spring-modulith-test
    spec:
      containers:
        - name: spring-modulith-test
          image: tkragsberger/spring-modulith-test:latest
          ports:
            - containerPort: 8080
