argocd/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-modulith-test-service
  namespace: modulith-argo
spec:
  selector:
    app: spring-modulith-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
