argocd/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-modulith-test
  namespace: modulith-argo
spec:
  ingressClassName: nginx
  rules:
    - host: hello-world.example2
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-modulith-test-service
                port:
                  number: 8080
